--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -75,7 +75,7 @@
             grid-gap: 30px;
             grid-template-columns: 1fr;
             margin-top: 7vh;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
         .formlabel {
             font-size: 14px;
@@ -119,7 +119,7 @@
             font-weight: bold;
             text-decoration: none;
         }
-        @media only screen and (max-width: 770px) {
+        @media only screen and (max-width: 767px) {
             #page-container {
                 margin: 20vh 8px;
                 padding: 0;
