--- a/core/static/core/podbase.css
+++ b/core/static/core/podbase.css
@@ -47,9 +47,9 @@ body {
     align-items: center;
     grid-gap: 7px;
 }
-#navlogo > img {
+.logoimg {
     width: auto;
-    height: 30px;
+    height: 22px;
 }
 .navmenu {
     position: absolute;
@@ -194,6 +194,9 @@ body {
 @media screen and (max-width: 769px) {
     .topnav {
         height: 33px;
+    }
+    .logoimg {
+        height: 20px;
     }
 }
 @media screen and (max-width: 342px) {
