--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -78,8 +78,8 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/media/about.jpg' %}" alt="logo" >
-                <img src="{% static 'core/media/lbwhite.png' %}" alt="logo" style="width: auto; height: 70px;">
+                <img class="logoimg" src="{% static 'core/media/about.jpg' %}" alt="logo" >
+                <img class="logoimg" src="{% static 'core/media/lbwhite.png' %}" alt="logo">
             </a>
             
             <div class="navmenu">
