--- a/account/templates/registration/subscribe.html
+++ b/account/templates/registration/subscribe.html
@@ -52,7 +52,7 @@ Subscribe
     {% endif %}
 
     <div style="text-align: center;">
-        <p>By clicking Sign up, you agree to our <a href="{% url 'core:legal' %}" style="text-decoration: none; color: #5e5cd4;">terms of service, and privacy policy</a>.</p>
+        <p style="font-size: small;">By clicking Sign up, you agree to our <a href="{% url 'core:legal' %}" style="text-decoration: none; color: #5e5cd4; font-size: small;">terms of service, and privacy policy</a>.</p>
     </div>
 
     <input type="submit" name="CreateAccount" class="btn" value="Sign up">
