--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -78,7 +78,7 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img class="logoimg" src="{% static 'core/media/about.jpg' %}" alt="logo" >
+                <!-- <img class="logoimg" src="{% static 'core/media/about.jpg' %}" alt="logo" > -->
                 <img class="logoimg" src="{% static 'core/media/lbwhite.png' %}" alt="logo">
             </a>
             
