--- a/core/templates/core/podbase.html
+++ b/core/templates/core/podbase.html
@@ -71,7 +71,7 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img class="logoimg" src="{% static 'core/media/about.jpg' %}" alt="logo">
+                <!-- <img class="logoimg" src="{% static 'core/media/about.jpg' %}" alt="logo"> -->
                 <img class="logoimg" src="{% static 'core/media/lbwhite.png' %}" alt="logo">
             </a>
             <div class="navmenu">
