--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -7,7 +7,7 @@
 <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 {% endblock meta %}
 
-{% block navmenu %}
+<!-- {% block navmenu %}
 <div class="navmenu">
     <a href="{% url 'core:event' %}">EVENTS</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
@@ -21,7 +21,7 @@
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 </div>
-{% endblock mobmenu %}
+{% endblock mobmenu %} -->
 
 {% block body %}
 <div style="margin: 7% 2% 7% 2%;">
