--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -18,7 +18,7 @@
             background-color: white;
             width: 100vw;
             overflow-x: hidden;
-            overflow-y: hidden;
+            overflow-y: auto;
         }
 
         @font-face {
