--- a/account/templates/registration/signin.html
+++ b/account/templates/registration/signin.html
@@ -53,8 +53,7 @@ Login
     <input type="submit" name="login" class="btn" value="Log in">
     <!-- <input type="submit" name="login" class="btnalt" value="Log in without password"> -->
     <button class="btnalt">Log in without password</button>
-    <br><br>
-    <p>Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p>
+    <p style="text-align: center;">Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p>
 
 </form>
 {% endblock form %}
