--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -66,7 +66,7 @@
 
         #page-container {
             height: 100vh;
-            margin: 20vh 2px 0 2px;
+            margin: 20vh 2px auto 2px;
             padding: 0 30%;
         }
         form {
@@ -121,7 +121,7 @@
         }
         @media only screen and (max-width: 767px) {
             #page-container {
-                margin: 20vh 8px;
+                margin: 20vh 8px auto 8px;
                 padding: 0;
             }
             form {
