--- a/core/templates/core/error.html
+++ b/core/templates/core/error.html
@@ -115,6 +115,9 @@
 
             footer {
                 border-top: 1px solid silver;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
