--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -80,7 +80,7 @@
                         {% if user.is_staff %}
                         <span>Logged in as @{{ request.user.alias }}</span>
                         {% else %}
-                        <span>Hi {{ request.user.alias }}.<br>Looks like you got here early. We are still getting things ready for you.<br>We will notify you through email as soon as we are officially live.</span>
+                        <span>Hi {{ request.user.alias }}.We are still getting things ready for you.</span>
                         {% endif %}
                     </div>
                     {% endif %}
