--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -176,7 +176,7 @@
         <div id="page-container">
             <div style="display: flex; justify-content: center; margin-bottom: 30px;">
                 <a href="{% url 'core:index' %}">
-                    <img src="{% static 'core/media/lbblack.png' %}" alt="logo" style="width: auto; height: 70px;">
+                    <img src="{% static 'core/media/fbl.png' %}" alt="logo" style="width: auto; height: 70px;">
                 </a>
             </div>
             {% block pageheader %}
