--- a/static_cdn/core/homepage.css
+++ b/static_cdn/core/homepage.css
@@ -75,7 +75,7 @@ section {
 }
 #imagediv {
     position: absolute;
-    top: 17%;
+    bottom: 17%;
     width: 100%;
     display: grid;
     place-items: center;
@@ -146,7 +146,7 @@ span {
 
 @media screen and (max-width: 770px) {
     #imagediv {
-        top: 14%;
+        bottom: 14%;
     }
     #bio {
         bottom: 10%;
