--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -24,22 +24,23 @@
 
         body {
             background-color: #505cff;
-            width: 100vw;
-            position: relative;
-            overflow-x: hidden;
-            overflow-y: auto;
+            left:0;
+            top:0;
+            width:100%;
+            height:100%;
+            overflow:auto;
         }
 
 
         /* Page Section */
 
         #page-container {
-            background-color: #ffffff;
             position: absolute;
-            min-width: 300px;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, 50%);
+            transform: translate(-50%, -50%);
+            background-color: #ffffff;
+            min-width: 300px;
             padding: 30px 20px;
             border-radius: 8px;
         }
@@ -83,8 +84,11 @@
             font-weight: bold;
             text-decoration: none;
             cursor: pointer;
+            border-radius: 8px;
+            border: none;
         }
         .btnalt, .btnalt:hover {
+            border-radius: 8px;
             background-color: white;
             color: black;
             border: 1px solid black;
@@ -102,58 +106,22 @@
                 font-size: 12px;
             }
         }
-
-        /* Footer Section */
-
-        footer {
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-            background-color: #ffffff;
-        }
-        .bottompagebar {
-            padding: 7px 0 4px 0;
-            text-align: center;
-            border-top: 1px gray solid;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .bottompagebar p {
-            font-size: 14px;
-        }
-        .bottompagebar a {
-            font-size: 14px;
-            font-weight: bold;
-            color: black;
-            text-decoration: none;
-        }
-
-        @media only screen and (max-width: 750px) {
-            .bottompagebar {
-                padding: 3px 0;
-            }
-            .bottompagebar p {
-                font-size: 13px;
-            }
-            .bottompagebar a {
-                font-size: 13px;
-            }
-        }
         
     </style>
     <body>
-        <div id="page-container">
-            <div style="display: flex; justify-content: center; margin-bottom: 30px;">
-                <a href="{% url 'core:index' %}">
-                    <img src="{% static 'core/media/fbl.png' %}" alt="logo" style="width: auto; height: 70px;">
-                </a>
+        <div style="height: 100%; width: 100%;">
+            <div id="page-container">
+                <div style="display: flex; justify-content: center; margin-bottom: 30px;">
+                    <a href="{% url 'core:index' %}">
+                        <img src="{% static 'core/media/fbl.png' %}" alt="logo" style="width: auto; height: 70px;">
+                    </a>
+                </div>
+                {% block pageheader %}
+                {% endblock pageheader %}
+            
+                {% block form %}
+                {% endblock form %}
             </div>
-            {% block pageheader %}
-            {% endblock pageheader %}
-        
-            {% block form %}
-            {% endblock form %}
         </div>
     </body>
 </html>
