--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -50,17 +50,18 @@
                     </div> -->
 
                     <div id="links">
+                        {% if user.is_admin %}
                         <a href="#" style="text-decoration: line-through;">MIXES</a>
-                        
-                        {% if user.is_staff %}
                         <a href="{% url 'core:event' %}" >EVENTS</a>
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
                         <a href="{% url 'core:podcast' %}" >PODCAST</a>
                         {% else %}
-                        <a href="#" style="text-decoration: line-through;">EVENTS</a>
-                        <a href="#" style="text-decoration: line-through;">BLOG</a>
-                        <a href="#" style="text-decoration: line-through;">PODCAST</a>
+                        <a href="https://soundcloud.com/lerb-fanbase" style="text-decoration: line-through;">MIXES</a>
+                        <a href="https://www.facebook.com/DJLERB/events" style="text-decoration: line-through;">EVENTS</a>
+                        <a href="https://medium.com/@leroybuliro" style="text-decoration: line-through;">BLOG</a>
+                        <a href="https://anchor.fm/kubonga" style="text-decoration: line-through;">PODCAST</a>
                         {% endif %}
+                        
 
                         <!-- <a href="https://calendly.com/lerbfinancial/consultation/" >BOOK A FINANCIAL CONSULTATION</a> -->
 
