updated homepage design

--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -56,10 +56,10 @@
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
                         <a href="{% url 'core:podcast' %}" >PODCAST</a>
                         {% else %}
-                        <a href="https://soundcloud.com/lerb-fanbase" style="text-decoration: line-through;">MIXES</a>
-                        <a href="https://www.facebook.com/DJLERB/events" style="text-decoration: line-through;">EVENTS</a>
-                        <a href="https://medium.com/@leroybuliro" style="text-decoration: line-through;">BLOG</a>
-                        <a href="https://anchor.fm/kubonga" style="text-decoration: line-through;">PODCAST</a>
+                        <a href="https://soundcloud.com/lerb-fanbase" >MIXES</a>
+                        <a href="https://www.facebook.com/DJLERB/events" >EVENTS</a>
+                        <a href="https://medium.com/@leroybuliro" >BLOG</a>
+                        <a href="https://anchor.fm/kubonga" >PODCAST</a>
                         {% endif %}
                         
 
