--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -45,9 +45,9 @@
         <div class="container">
             <div class="content">
                 <section>
-                    <div id="imagediv">
+                    <!-- <div id="imagediv">
                         <img id="image" src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
-                    </div>
+                    </div> -->
 
                     <div id="links">
                         <a href="https://soundcloud.com/lerb-fanbase" >MIXES</a>
