--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="{% static 'core/media/favicon.ico' %}">
-        <title>{% block pagetitle%}{% endblock pagetitle%} - Fueled by Leroy</title>
+        <title>{% block pagetitle%}{% endblock pagetitle%} - Leroy Buliro</title>
     </head>
     <style>
         * {
@@ -113,7 +113,7 @@
             <div id="page-container">
                 <div style="display: flex; justify-content: center; margin-bottom: 30px;">
                     <a href="{% url 'core:index' %}">
-                        <img src="{% static 'core/media/fbl.png' %}" alt="logo" style="width: auto; height: 70px;">
+                        <img src="{% static 'core/media/lbblack.png' %}" alt="logo" style="width: auto; height: 70px;">
                     </a>
                 </div>
                 {% block pageheader %}
