--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -54,7 +54,7 @@ Login
     <!-- <input type="submit" name="login" class="btnalt" value="Log in without password"> -->
     <!-- <button class="btnalt">Log in without password</button> -->
     <br><br>
-    <p>Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p>
+    <!-- <p>Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p> -->
 
 </form>
 {% endblock form %}
