--- a/account/templates/registration/subscribe.html
+++ b/account/templates/registration/subscribe.html
@@ -57,7 +57,7 @@ Subscribe
 
     <input type="submit" name="CreateAccount" class="btn" value="Sign up">
 
-    <p style="text-align: center;">Already have an account? <a href="{% url 'account:signin' %}">Log in</a></p>
+    <!-- <p style="text-align: center;">Already have an account? <a href="{% url 'account:signin' %}">Log in</a></p> -->
 
 </form>
 {% endblock form %}
