--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -75,7 +75,7 @@ section {
 }
 #imagediv {
     position: absolute;
-    bottom: 17%;
+    top: 17%;
     width: 100%;
     display: grid;
     place-items: center;
@@ -110,6 +110,16 @@ a:hover {
     text-decoration: none;
     font-size: 24px;
 }
+#intro {
+    position: absolute;
+    bottom: 4%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 #bio {
     position: absolute;
     bottom: 10%;
@@ -119,7 +129,6 @@ a:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
-    grid-gap: 10px;
 }
 p {
     font-family: Josefin Sans;
@@ -146,9 +155,6 @@ span {
 
 @media screen and (max-width: 770px) {
     #imagediv {
-        bottom: 14%;
-    }
-    #bio {
-        bottom: 10%;
-    }    
+        top: 14%;
+    }   
 }
