form modification. regex update

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -75,6 +75,7 @@
         .formerror {
             color: #ff0000;
             font-size: medium;
+            display: inline-block;
         }
         .btn, .btn:hover {
             background-color: black;
@@ -103,6 +104,9 @@
                 margin-top: 3vh;
             }
             .formlabel {
+                font-size: 12px;
+            }
+            .formerror {
                 font-size: 12px;
             }
         }
