form modification. regex update

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -74,8 +74,8 @@
         }
         .formerror {
             color: #ff0000;
-            font-size: medium;
-            display: inline-block;
+            font-size: 14px;
+            display: block;
         }
         .btn, .btn:hover {
             background-color: black;
