--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -72,7 +72,7 @@
                     </div>
                     
                     <div id="bio">
-                        <p>deejay ◊ storyteller ◊ financial consultant ◊ fullstack developer</p>
+                        <p>deejay ◊ storyteller ◊ consultant ◊ developer</p>
                     </div>
                                         
                 </section>
