form modification. regex update

--- a/account/templates/registration/auth.html
+++ b/account/templates/registration/auth.html
@@ -19,7 +19,7 @@ Enter your Email
         {% if sess_email %}
         <input type="email" name="email" class="forminput" value="{{ sess_email }}" required>
         {% else %}
-        <input type="email" name="email" class="forminput" value="{{ form.email }}" required>
+        <input type="email" name="email" class="forminput" required>
         {% endif %}
     </div>
 
