homepage ux alteration

--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -71,9 +71,9 @@
                         {% endif %}
                     </div>
                     
-                    <div id="bio">
+                    <!-- <div id="bio">
                         <p>deejay ◊ storyteller ◊ consultant ◊ developer</p>
-                    </div>
+                    </div> -->
                                         
                 </section>
 
