homepage ux alteration

--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -67,7 +67,7 @@
                         {% if user.is_authenticated %}
                             <a href="{% url 'account:logout' %}">LOG OUT</a>
                         {% else %}
-                            <a href="{% url 'account:auth' %}">SIGN IN</a>
+                            <a href="{% url 'account:auth' %}">INSIDERS</a>
                         {% endif %}
                     </div>
                     
