--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -60,8 +60,8 @@
                     {% endif %}
 
                     <div id="links">
-                        <a href="https://soundcloud.com/lerb-fanbase" >MIXES</a>
-                        <a href="https://www.facebook.com/DJLERB/events" >EVENTS</a>
+                        <!-- <a href="https://soundcloud.com/lerb-fanbase" >MIXES</a> -->
+                        <a href="https://www.facebook.com/DJLERB/events" >TOUR DATES</a>
                         <a href="https://medium.com/@leroybuliro" >BLOG</a>
                         <a href="https://anchor.fm/kubonga" >PODCAST</a>
                         {% if user.is_authenticated %}
