--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -46,7 +46,7 @@
             <div class="content">
                 <section>
                     <div id="imagediv">
-                        <img id="image" src="{% static 'core/media/about.jpg' %}" alt="leroy">
+                        <img id="image" src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
                     </div>
                     
                     {% if user.is_authenticated %}
