--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -45,6 +45,19 @@
         <div class="container">
             <div class="content">
                 <section>
+                    
+                    <div id="links">
+                        <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
+                        <a href="https://ra.co/dj/lerb/" target="_blank" >MUSIC</a>
+                        <a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
+                        <a href="https://anchor.fm/kubonga" target="_blank" >PODCAST</a>
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'account:logout' %}">LOG OUT</a>
+                        {% else %}
+                        <a href="{% url 'account:auth' %}">INSIDERS</a>
+                        {% endif %}
+                    </div>
+                    
                     <div id="imagediv">
                         <img id="image" src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
                     </div>
@@ -58,18 +71,6 @@
                         {% endif %}
                     </div>
                     {% endif %}
-
-                    <div id="links">
-                        <!-- <a href="https://soundcloud.com/lerb-fanbase" >MIXES</a> -->
-                        <a href="https://www.facebook.com/DJLERB/events" >TOUR DATES</a>
-                        <a href="https://medium.com/@leroybuliro" >BLOG</a>
-                        <a href="https://anchor.fm/kubonga" >PODCAST</a>
-                        {% if user.is_authenticated %}
-                            <a href="{% url 'account:logout' %}">LOG OUT</a>
-                        {% else %}
-                            <a href="{% url 'account:auth' %}">INSIDERS</a>
-                        {% endif %}
-                    </div>
                     
                     <!-- <div id="bio">
                         <p>deejay ◊ storyteller ◊ consultant ◊ developer</p>
