--- a/core/templates/core/serverError.html
+++ b/core/templates/core/serverError.html
@@ -7,29 +7,13 @@
 <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 {% endblock meta %}
 
-{% block navmenu %}
-<div class="navmenu">
-    <a href="{% url 'core:event' %}">EVENTS</a>
-    <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a href="{% url 'core:podcast' %}">PODCAST</a>
-</div>
-{% endblock navmenu %}
-
-{% block mobmenu %}
-<div class="mobile-menu">
-    <a href="{% url 'core:event' %}">EVENTS</a>
-    <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a href="{% url 'core:podcast' %}">PODCAST</a>
-</div>
-{% endblock mobmenu %}
-
 {% block body %}
 <div style="margin: 7% 2% 7% 2%;">
-    <h4 style="color: #fff;">Not Found</h4>
+    <h4 style="color: #fff;">Server Error</h4>
     <br/>
 
     <div>
-        <p style="color: #fff;">The URL you have requested was not found. We apologize for any inconvenience. From here you can return to the homepage.</p>
+        <p style="color: #fff;">The query you have requested was not found. We apologize for any inconvenience. From here you can return to the homepage.</p>
         <br/>
         <a href="{% url 'core:index' %}" style="color: red; font-weight: bolder;">Go Back Home</a>
     </div>
