--- a/core/templates/core/error.html
+++ b/core/templates/core/error.html
@@ -34,15 +34,12 @@
                 <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
             </div>
             <a>© 2022 Leroy Buliro. All rights reserved.</a>
-            <span>
-                <a href="{% url 'core:legal' %}">Legal</a>
-            </span>
         </footer>
     </body>
     
     <noscript>
         <div style="display: flex; place-content: center;">
-            <p>Javascript not supported on your browser, please enable Javascript in order to fully utilize the website</p>
+            <p>Please enable Javascript in order to fully utilize the website</p>
         </div>
     </noscript>
 </html>
