--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -48,7 +48,7 @@
                     
                     <div id="links">
                         <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
-                        <a href="https://ra.co/dj/lerb/" target="_blank" >MUSIC</a>
+                        <a href="https://ra.co/dj/lerb/" target="_blank" >TOUR DATES</a>
                         <a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
                         <a href="https://anchor.fm/kubonga" target="_blank" >PODCAST</a>
                         {% if user.is_authenticated %}
@@ -71,7 +71,7 @@
                         {% endif %}
                     </div>
                     {% endif %}
-                    
+
                     <!-- <div id="bio">
                         <p>deejay ◊ storyteller ◊ consultant ◊ developer</p>
                     </div> -->
