login.py modified plus dependancies

--- a/account/templates/registration/signin.html
+++ b/account/templates/registration/signin.html
@@ -12,27 +12,20 @@ Login
 {% block form %}
 <form action="" method="post">{% csrf_token %}
 
-    {% if sess_email %}
-
-    <div onclick="history.back()">
+    
+    <div>
         <span class="formlabel">{{ form.email.label }}</span>
         {% for error  in form.email.errors %}
         <span class="formerror">*{{ error }}</span>
         {% endfor %}
-        <input type="email" name="email" class="forminput2" value="{{ sess_email }}" readonly>
+        {% if sess_email %}
+        <a href="{% url 'account:auth' %}">
+            <input type="email" name="email" class="forminput2" value="{{ sess_email }}" readonly>
+        </a>
+        {% else %}
+        <input type="email" name="email" class="forminput" required>
+        {% endif %}
     </div>
-
-    {% else %}
-
-    <div>
-        <span class="formlabel">{{ form.alias.label }}</span>
-        {% for error  in form.alias.errors %}
-        <span class="formerror">*{{ error }}</span>
-        {% endfor %}
-        <input type="email" name="alias" class="forminput" required>
-    </div>
-
-    {% endif %}
 
     <div>
         <span class="formlabel">{{ form.password.label }}</span>
@@ -51,8 +44,8 @@ Login
     {% endif %}
 
     <input type="submit" name="login" class="btn" value="Log in">
-    <!-- <input type="submit" name="login" class="btnalt" value="Log in without password"> -->
-    <!-- <button class="btnalt">Log in without password</button> -->
+    <!-- <input type="submit" name="loginalt" class="btnalt" value="Log in without password"> -->
+    <button class="btnalt">Log in without password</button>
     <!-- <p style="text-align: center;">Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p> -->
 
 </form>
